syntax = "proto3";

package expcmake;

import "myproto/address.proto";

message NameQuerry {
    string name = 1;
    string surname = 2;
}

service AddressBook {
    rpc GetAddress(NameQuerry) returns (Address) {}
}
